--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,5 @@
 [build]
-    command = "npm run build"
-    publish = "build"
+    command = npm run build
+commandOrigin: config
+publish: /opt/build/repo/build
+publishOrigin: config
