--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,4 @@
 [build]
-    command = "vite build"
-    publish = "build"
+  command = "npm run build"
+  publish = "build/"
+  functions = "functions/"
