--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"postcss": "^8.4.24",
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.3",
+		"svelte-preprocess-import-assets": "^1.0.1",
 		"tailwindcss": "^3.3.2",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.6"
