--- a/.svelte-kit/tsconfig.json
+++ b/.svelte-kit/tsconfig.json
@@ -1,6 +1,12 @@
 {
 	"compilerOptions": {
 		"paths": {
+			"$img": [
+				"../src/lib/images"
+			],
+			"$img/*": [
+				"../src/lib/images/*"
+			],
 			"$lib": [
 				"../src/lib"
 			],
